--- a/git_repo/notebooks/read_from_topic.ipynb
+++ b/git_repo/notebooks/read_from_topic.ipynb
@@ -387,6 +387,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9a17b58b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import *\n",
+    "\n",
+    "flat_f = flat_df \\\n",
+    "    .withColumn(\"delay_minutes\",\n",
+    "        (unix_timestamp(\"actual_departure\") - unix_timestamp(\"expected_departure\")) / 60\n",
+    "    ) \\\n",
+    "    .withColumn(\"occupancy_rate\",\n",
+    "        (col(\"passengers\") / col(\"capacity\")) * 100\n",
+    "    ) \\\n",
+    "    .withColumn(\"flight_duration_minutes\",\n",
+    "        (unix_timestamp(\"arrival_time\") - unix_timestamp(\"actual_departure\")) / 60\n",
+    "    ) \\\n",
+    "    .withColumn(\"is_weekend\",\n",
+    "        date_format(\"expected_departure\", \"u\").cast(\"int\") >= 6\n",
+    "    ) \\\n",
+    "    .withColumn(\"day_part\",\n",
+    "        when(hour(\"actual_departure\").between(5, 11), \"Morning\")\n",
+    "        .when(hour(\"actual_departure\").between(12, 16), \"Afternoon\")\n",
+    "        .when(hour(\"actual_departure\").between(17, 20), \"Evening\")\n",
+    "        .otherwise(\"Night\")\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "726f2b5d-2993-496f-9123-8e66d6257e35",
    "metadata": {},
@@ -416,6 +446,14 @@
     "#     .awaitTermination()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0166d3a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
